k8s/kube-state-metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: gke-managed-cim
  labels:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/version: v2.9.2
spec:
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
    - name: telemetry
      port: 8081
      targetPort: 8081
  selector:
    app.kubernetes.io/name: gke-managed-kube-state-metrics
