k8s/ethereum-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ethereum-route
  namespace: ethereum
spec:
  parentRefs:
    - name: ethereum-gateway
      namespace: ethereum
  hostnames:
    - "ethereum.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ethereum-node-loadbalancer
          port: 8545
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /debug
      backendRefs:
        - name: ethereum-node-loadbalancer
          port: 6060
          weight: 1
